--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,6 +7,6 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content>
-    <button ion-button (click)="onLogin()" type="submit" block>Login To Untappd</button>
+<ion-content padding>
+    <button ion-button (click)="onLogin()" type="submit" block>Login To Untappd!</button>
 </ion-content>
